added abstract and keywords

--- a/manuscript/Manuscript.tex
+++ b/manuscript/Manuscript.tex
@@ -3,11 +3,12 @@
 \usepackage[margin=1in]{geometry}
 \usepackage{setspace}
 
-\title{Predicting Housing Cost with Linear Regression}
+\title{Predicting the Housing Market using \\ Linear Regression}
 
 \author{Garrick Ho\\
   Jun Yan\\[2ex]
-  Department of Statistics, University of Connecticut\\
+  Department of Statistics\\
+  University of Connecticut\\
 }
 
 \begin{document}
@@ -16,10 +17,14 @@
 \doublespace
 
 \begin{abstract}
-    This is where the abstract goes.
+    With the housing market fluctuating every year, many real estate owners and businesses face a problem with gaining an accurate representation of the future of the housing market. Lots of people do not know much about the market, so they will go to real estate owners or businesses to learn more about the market. And then see what the market is at and if it is the right time to buy a house. If real estate owners and businesses are able to gain more accuracy in predicting the housing market, they will be able to help more people and possibly gain more business. Not only can this benefit the consumers, the builders are able to move with the market and have a better understanding of it. This paper aims to construct a robust linear regression model by using machine learning techniques to predict housing costs accurately. By leveraging natural language processing, the linear regression model analyzes home property descriptions and extracts vital insights that significantly contribute to precise pricing predictions. This paper ends with an explanation of the limitations of this study and potential future works that can be done.
 
 \bigskip
 \noindent{\sc Keywords}:
+housing market;
+natural language processing;
+linear regression;
+model predictions
 
 
 \end{abstract}
