added formula and discription

--- a/manuscript/Manuscript.tex
+++ b/manuscript/Manuscript.tex
@@ -35,6 +35,13 @@ model predictions
 
 \section{Methods}
 
+\begin{equation}
+  \label{eq:Multi}
+  Y = \beta_{0} + \beta_{1}X_{1} + \beta_{2}X_{2} + ... + \beta_{n}X_{n} + \epsilon
+\end{equation}
+
+Equation~\ref{eq:Multi} is the Multiple Linear Regression model being used. \(Y\) is the dependent variable, also known as the value that is being predicted. In this case, it would be the cost of a house. \(X_{n}\) is the independent variable, which is the characteristics of the house that are used to predict the house cost. \(\beta_{n}\) is the average amount by which the dependent variable increases and decreases depending on when the independent variable increases one standard deviation. When all the other independent variables are held constant. \(\beta_{0}\) represents the value of the dependent variable when all the independent variables are equal to zero. \(\epsilon\) is the error term which represents the margin of error within the linear regression model. 
+
 \section{Simulation}
 
 \section{Application}
