--- a/manuscript/Manuscript.tex
+++ b/manuscript/Manuscript.tex
@@ -3,6 +3,7 @@
 \usepackage[margin=1in]{geometry}
 \usepackage{setspace}
 \usepackage{booktabs}
+\usepackage{hyperref}
 
 \title{Predicting the Housing Market using \\ Linear Regression}
 
@@ -62,12 +63,13 @@ All the references used in this paper will be included in Section~\ref{sec:refer
 % Why does the data help answer the research question?
 % What exploratory analyses are done (descriptives, visualization, etc.)?
 
-% total of 545 entries, 13 columns (6 int and 7 str)
-\begin{flushleft}
-\begin{table}[h]
-  \caption{Data Description}
+The data that will be used for this paper contains five hundred and forty-five houses and the descriptions of each house. The dataset contains features and corresponding labels for training and testing a Multiple Linear Regression (MLR) model to predict the house cost. In total, there are thirteen columns, seven are categorical and six are numerical. This was sourced from \href{https://www.kaggle.com/code/ashydv/housing-price-prediction-linear-regression/input}{Kaggle}. 
+
+The data was explored and visualized using the pandas library in Python. For the columns that were strings, they have been transformed into an integer data type so that they can be read in the model. More specifically, the 'furnishingstatus' column was broken down into three different columns. One for furnished, one for semi-furnished, and lastly one for unfurnished. 
+
+\begin{table}[h] 
+\caption{Data Description}
   \label{tab:rv}
-\centering
 \begin{tabular}{llll}
   \toprule
 Variable & Data Type & Instance & Purpose \\
@@ -86,9 +88,15 @@ parking & Int & 2 & \(X_{n}\) \\
 prefarea & Str & yes, no & \(X_{n}\) \\
 furnishingstatus & Str & furnished, semi-furnished, unfurnished & \(X_{n}\) \\
    \bottomrule
-\end{tabular}
+\end{tabular}\par
+\bigskip
+In Table~\ref{tab:rv}, the 'variable' column shows the names of all the variables that are in the dataset. The 'Data Type' column shows the data type of each variable in the dataset. Note that 'Int' means integer and 'Str' means string. The 'Instance' column shows an example of what a data point for that column would look like. The 'Purpose' column shows the importance of each variable to the machine learning step.
 \end{table}
-\end{flushleft}
+
+
+\bigskip
+\bigskip
+
 
 \section{Methods}
 \label{sec:meth}
@@ -102,7 +110,6 @@ furnishingstatus & Str & furnished, semi-furnished, unfurnished & \(X_{n}\) \\
 % How are the variances of the point estimators estimated?
 % How are the null distribution of the testing statistics established?
 % Clearly state the assumptions and claims of theoretical results.
-
 
 \begin{equation}
   \label{eq:Multi}
