--- a/manuscript/Manuscript.tex
+++ b/manuscript/Manuscript.tex
@@ -4,11 +4,14 @@
 \usepackage{setspace}
 \usepackage{booktabs}
 \usepackage{hyperref}
+\usepackage[square,numbers]{natbib}
+
+
 
 \title{Predicting the Housing Market using \\ Linear Regression}
 
 \author{Garrick Ho\\
-  Jun Yan\\[2ex]
+  Jun Yan\\[1ex]
   Department of Statistics\\
   University of Connecticut\\
 }
@@ -66,7 +69,7 @@ All the references used in this paper will be included in Section~\ref{sec:refer
 The data that will be used for this study was sourced from \href{https://www.kaggle.com/code/ashydv/housing-price-prediction-linear-regression/input}{Kaggle}. It is a data set that contains \(n = 545\) observations (different house samples) of thirteen variables, seven of which are categorical variables and six are numerical variables. The data set contains features and corresponding labels for training and testing a Multiple Linear Regression (MLR) model to predict the house cost.
 The data was explored and visualized using the pandas library in Python. For the columns that were strings, they have been transformed into an integer data type so that they can be read in the model. More specifically, the 'furnishingstatus' column was broken down into three different columns. One for furnished, one for semi-furnished, and lastly one for unfurnished. 
 
-\begin{table}[h] 
+\begin{table}[ht] 
 \caption{Data Description}
   \label{tab:rv}
 \begin{tabular}{llll}
@@ -149,5 +152,12 @@ Equation~\ref{eq:Multi} is the Multiple Linear Regression model being used. \(Y\
 % References not cited should not appear here.
 % All are automatically taken care of by BibTeX.
 % Styles are controlled by bib style (.bst file).
+
+
+\cite{singh2021machlearn}
+\cite{alfiyantin2017regress}
+
+\bibliographystyle{plainnat}
+\bibliography{references}
 
 \end{document}
