--- a/manuscript/Manuscript.tex
+++ b/manuscript/Manuscript.tex
@@ -95,15 +95,19 @@ furnishingstatus & Str & furnished, semi-furnished, unfurnished & \(X_{n}\) \\
 In Table~\ref{tab:rv}, the 'variable' column shows the names of all the variables that are in the dataset. The 'Data Type' column shows the data type of each variable in the dataset. Note that 'Int' means integer and 'Str' means string. The 'Instance' column shows an example of what a data point for that column would look like. The 'Purpose' column shows the importance of each variable to the machine learning step.
 \end{table}
 
+%fix the plot so that it starts with yes each time
 \begin{figure}
-    \centering
     \includegraphics[width=1\textwidth]{categorical_plots.pdf}
     \caption{Categorical Variable Plots}
     \label{fig:categorical_plots}
+In figure~\ref{fig:categorical_plots}, the plots show the distributions for all the categorical variables. 
+
 \end{figure}
 
+
+
 \begin{figure}
-    \centering
+
     \includegraphics[width=1\textwidth]{numerical_plots.pdf}
     \caption{Numerical Variable Plots}
     \label{fig:numberical_plots}
