added caption to cat plot

--- a/manuscript/Manuscript.tex
+++ b/manuscript/Manuscript.tex
@@ -95,12 +95,11 @@ furnishingstatus & Str & furnished, semi-furnished, unfurnished & \(X_{n}\) \\
 In Table~\ref{tab:rv}, the 'variable' column shows the names of all the variables that are in the dataset. The 'Data Type' column shows the data type of each variable in the dataset. Note that 'Int' means integer and 'Str' means string. The 'Instance' column shows an example of what a data point for that column would look like. The 'Purpose' column shows the importance of each variable to the machine learning step.
 \end{table}
 
-%fix the plot so that it starts with yes each time
 \begin{figure}
     \caption{Categorical Variable Plots}
     \includegraphics[width=1\textwidth]{categorical_plots.pdf}
     \label{fig:categorical_plots}
-In figure~\ref{fig:categorical_plots}, the plots show the distributions for all the categorical variables. 
+In figure~\ref{fig:categorical_plots}, the plots show the distributions for all the categorical variables. Most of the houses in this data set are located near a main road. Only one-fifth of the houses have a room for guests. For the basement category, two-fifths of them have one. Almost none of the houses have hot water heating. There is air conditioning in about two-fifths of the data. About one-fifth of the houses are located in a preferred area. And lastly, the house can come either furnished, semi-furnished, or unfurnished. Most of the house came semi-furnished, next being unfurnished and then fully furnished. 
 
 \end{figure}
 
