added caption for fig 2

--- a/manuscript/Manuscript.tex
+++ b/manuscript/Manuscript.tex
@@ -100,15 +100,13 @@ In Table~\ref{tab:rv}, the 'variable' column shows the names of all the variable
     \includegraphics[width=1\textwidth]{categorical_plots.pdf}
     \label{fig:categorical_plots}
 In figure~\ref{fig:categorical_plots}, the plots show the distributions for all the categorical variables. Most of the houses in this data set are located near a main road. Only one-fifth of the houses have a room for guests. For the basement category, two-fifths of them have one. Almost none of the houses have hot water heating. There is air conditioning in about two-fifths of the data. About one-fifth of the houses are located in a preferred area. And lastly, the house can come either furnished, semi-furnished, or unfurnished. Most of the house came semi-furnished, next being unfurnished and then fully furnished. 
-
 \end{figure}
-
-
 
 \begin{figure}
     \caption{Numerical Variable Plots}
     \includegraphics[width=1\textwidth]{numerical_plots.pdf}
     \label{fig:numberical_plots}
+In figure~\ref{fig:numberical_plots}, four different plots are shown to display the distribution of the numerical variables in the data. The average number of bedrooms in these homes is three, with two being the second most. For the number of bathrooms, the majority of homes have one. About half of the homes in the data are one-story homes while about the other half are two stories. For parking, most of them have no parking spots. A few of them have one or two parking spots. 
 \end{figure}
 
 
