--- a/manuscript/references.bib
+++ b/manuscript/references.bib
@@ -1,4 +1,4 @@
-@INPROCEEDINGS{singh2021machlearn,
+@INPROCEEDINGS{singh2021,
   author={Singh, Akhilendra P and Rastogi, Kartikey and Rajpoot, Shashank},
   booktitle={2021 3rd International Conference on Advances in Computing, Communication Control and Networking (ICAC3N)}, 
   title={House Price Prediction Using Machine Learning}, 
@@ -9,7 +9,7 @@
   doi={10.1109/ICAC3N53548.2021.9725552}
 }
 
-@article{alfiyantin2017regress,
+@article{alfiyantin2017,
   author={Alfiyantin, Adyan N and Febrita, Ruth E and Taufiq, Hilman and Mahmundy, Wayan F},
   journal={International Journal of Advanced Computer Science and Applications},
   title={Modeling House Price Prediction using Regression Analysis and Particle Swarm Optimization},
@@ -19,3 +19,25 @@
   pages={},
 }
 
+@article{kasuya2018,
+  author={Kasuya, Eiiti},
+  journal={Ecological Models and Data in R},
+  title={On the use of r and r squared in correlation and regression},
+  year={2018},
+  volume={34},
+  number={1},
+  pages={235-236},
+}
+
+@article{uyanik2013,
+  author={Uyanik, Gulden K and Guler, Nese},
+  journal={Procedia - Social and Behavioral Sciences},
+  title={A Study on Multiple Linear Regression Analysis},
+  year={2013},
+  volume={106},
+  number={},
+  pages={234-240},
+  note = {4th International Conference on New Horizons in Education},
+  issn = {1877-0428},
+  doi = {https://doi.org/10.1016/j.sbspro.2013.12.027},
+}
