added some parts to discussion

--- a/manuscript/Manuscript.tex
+++ b/manuscript/Manuscript.tex
@@ -53,14 +53,8 @@ model predictions
 % Contributions
 
 % A roadmap
-The rest of the paper is organized in the following way.
-Beginning with the overall introduction located in Section~\ref{sec:intro}.
-A brief introduction about the data will be shown in Section~\ref{sec:data}. Here, the variables will be described and explained how they contribute to the research question.
-Then, the methodology used in this paper will be explained in Section~\ref{sec:meth}.
-Next, the simulation will be reported in Section~\ref{sec:sim}. This section will present the results from the model and have further analysis with tables and figures.
-The applications of the results found will be in Section~\ref{sec:app}. More in-depth analysis of how the results can be applied to the real world will be in this section.
-Finally, the discussion part for this paper will be in Section~\ref{sec:disc}. The limitations of the current study and future direction will be discussed here.
-All the references used in this paper will be included in Section~\ref{sec:refer}.
+The rest of the paper is organized in the following way. Beginning with the overall introduction located in Section~\ref{sec:intro}. A brief introduction about the data will be shown in Section~\ref{sec:data}. Here, the variables will be described and explained how they contribute to the research question. Then, the methodology used in this paper will be explained in Section~\ref{sec:meth}. Next, the simulation will be reported in Section~\ref{sec:sim}. This section will present the results from the model and have further analysis with tables and figures. The applications of the results found will be in Section~\ref{sec:app}. More in-depth analysis of how the results can be applied to the real world will be in this section. Finally, the discussion part for this paper will be in Section~\ref{sec:disc}. The limitations of the current study and future direction will be discussed here.
+
 
 
 \section{Data}
@@ -118,7 +112,9 @@ In figure~\ref{fig:numberical_plots}, four different plots are shown to display 
 
 \bigskip
 \bigskip
-
+\bigskip
+\bigskip
+\bigskip
 
 \section{Methods}
 \label{sec:meth}
@@ -172,8 +168,9 @@ Equation~\ref{eq:R2} is the formula for R-squared. R-squared is a measure of the
 % A summary, again, of the contributions of the research.
 % The research question posed as the `need’ of the introduction must be answered here (Zeiger 2000).
 % Limitations of the current study
+One limitation of this current study is that this data set is very small and has very limited variables. The next step for this study is to gain access to a data set from the actual house market and produce a model with it. 
 % Future directions.
-
+In the last decade, there have been three recessions in the United States. Being able to create a stronger model that can precisely predict the market can be more beneficial than just looking at house prices. If the model can see the fluctuation in the market, then the model can also help predict when the next recession is going to hit. 
 
 \section{References}
 \label{sec:refer}
@@ -183,10 +180,6 @@ Equation~\ref{eq:R2} is the formula for R-squared. R-squared is a measure of the
 % All are automatically taken care of by BibTeX.
 % Styles are controlled by bib style (.bst file).
 
-
-\cite{singh2021}
-\cite{alfiyantin2017}
-\cite{uyanik2013}
 
 \medskip
 
