added more discussion

--- a/manuscript/Manuscript.tex
+++ b/manuscript/Manuscript.tex
@@ -168,7 +168,11 @@ Equation~\ref{eq:R2} is the formula for R-squared. R-squared is a measure of the
 % A summary, again, of the contributions of the research.
 % The research question posed as the `need’ of the introduction must be answered here (Zeiger 2000).
 % Limitations of the current study
-One limitation of this current study is that this data set is very small and has very limited variables. The next step for this study is to gain access to a data set from the actual house market and produce a model with it. 
+One limitation of this current study is that this data set is very small and has very limited variables. The next step for this study is to gain access to a data set from the actual house market and produce a model with it. Another factor that can limit this study is that nowadays, there are infinite numbers of factors that can affect the cost of a house. So creating a model to include all these new factors is practically impossible. 
+\\
+\smallskip
+
+
 % Future directions.
 In the last decade, there have been three recessions in the United States. Being able to create a stronger model that can precisely predict the market can be more beneficial than just looking at house prices. If the model can see the fluctuation in the market, then the model can also help predict when the next recession is going to hit. 
 
