added linear regression model

--- a/manuscript/Manuscript.tex
+++ b/manuscript/Manuscript.tex
@@ -129,6 +129,8 @@ In figure~\ref{fig:numberical_plots}, four different plots are shown to display 
 % How are the null distribution of the testing statistics established?
 % Clearly state the assumptions and claims of theoretical results.
 
+
+
 \begin{equation}
   \label{eq:Multi}
   Y = \beta_{0} + \beta_{1}X_{1} + \beta_{2}X_{2} + ... + \beta_{n}X_{n} + \epsilon
@@ -154,6 +156,15 @@ Equation~\ref{eq:Multi} is the Multiple Linear Regression model being used. \(Y\
 \end{align}
 
 Equation~\ref{eq:R2} is the formula for R-squared. R-squared is a measure of the goodness of fit of a model. The sum squared regression is the sum of the residuals squared and the total sum of squares is the sum of the distance the data is away from the mean all squared. It is a percentage that takes the values between 0 and 1. If the percentage is 1, then the variation in the \(y\) values is accounted for by the \(x\) values. If the percentage is 0, then none of the variations of the \(y\) values is accounted for by the \(x\) values. \cite{kasuya2018}
+
+\begin{figure}[h!]
+    \caption{Linear Regression Plot}
+    \includegraphics[width=1\textwidth]{linear_regression_plot.pdf}
+    \label{fig:regression_plot}
+\end{figure}
+Figure~\ref{fig:regression_plot} shows a linear regression plot with the predicted house price against the actual house price. Based on this plot that was created, it looks like the model was somewhat accuracy in predicting the prices. 
+
+
 
 \section{Application}
 \label{sec:app}
