added parts to simulation

--- a/manuscript/Manuscript.tex
+++ b/manuscript/Manuscript.tex
@@ -148,7 +148,7 @@ Equation~\ref{eq:Multi} is the Multiple Linear Regression model being used. \(Y\
 % Methods
 % Performance measures
 
-This linear regression model aims to predict the house price with the different characteristics of a house by using the trained data and testing it against the testing data. To see how well the model performed in predicting the house prices, \(R^2\) was used. 
+This linear regression model aims to predict the house price with the different characteristics of a house by using the trained data and testing it against the testing data. To see how well the model performed in predicting the house prices, \(R^2\) was used and a visualization was created to help see the results.  
 
 \begin{align}
 \label{eq:R2}
